# dir-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  Taskfile.deps.yml  Taskfile.test-env.yml  Taskfile.vars.yml  Taskfile.yml  pyproject.toml  renovate.json
.github/: CODEOWNERS  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  codeql.yml  conventional_commits.yml  dependencies.yaml  dependency.yml  lint.yml  reusable-release-sdk.yaml  reusable-test-sdk.yaml
dir-sdk-python/agntcy/dir_sdk/client/: __init__.py  client.py  config.py  oauth_pkce.py  test_client.py  test_oidc_auth.py  token_cache.py
dir-sdk-python/agntcy/dir_sdk/models/: README.md  __init__.py  naming_v1.py
examples/: example.py  example_interactive_oidc.py  pyproject.toml
