[project]
name = "agntcy-dir"
version = "1.1.1"
description = "Directory SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agntcy-dir-grpc-python==1.78.0.1.20260319131759+f3a65f0dc151",
    "agntcy-dir-protocolbuffers-python==34.0.0.1.20260319131759+f3a65f0dc151",
    "grpcio>=1.78.0",
    "pyasn1>=0.6.3",
    "spiffe>=0.2.6",
    "spiffe-tls>=0.3.1",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "uuid>=1.30"]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dir-sdk-python/agntcy"]

[tool.pytest.ini_options]
pythonpath = ["dir-sdk-python"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["CPY001"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-copyright]
notice-rgx = '''
(?i)# Copyright AGNTCY Contributors \(https:\/\/github\.com\/agntcy\)
(?i)# SPDX-License-Identifier: Apache-2\.0
'''
